New year section

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
         </section>
 
         <section class="offer">
+            <div class="add">
             <div class="Best">
-                <h2>NEW BEST OFFER</h2>
-                <h1>Coming Soon</h1>
-                <p>New Year's Day has already come and gone,<br>but the first few weeks of 2024 are still upon us. <br>And while any time is a good time to make changes in your life. </p>
+                <h6>NEW BEST OFFER</h6>
+                <h6 class="come">Coming Soon</h6>
+                <p class="day">New Year's Day has already come and gone,<br>but the first few weeks of 2024 are still upon us. <br>And while any time is a good time.</p>
             </div>
 
             <div class="Images">
@@ -58,9 +59,20 @@
             </div>
 
             <div class="New-year">
-                <h1>2024</h1>
-                <p>New Year's Day has already come and gone,<br>but the first few weeks of 2024</p>
+                <h1 class="year">2024</h1>
+                <p class="new">New Year's Day has already come and gone,<br>but the first few weeks of 2024</p>
                 <img src="resources/Group 96.png" alt="">
+            </div>
+        </div>
+        </section>
+
+        <section>
+            <div class="font">
+                <div class="FUNCTIONAL">
+                    <h5>WHAT IS FUNCTIONAL</h5>
+                    <h1><span class="colap">Holidays</span> Sale 50%</h1>
+                    <p>New Year's Day has already come and gone,but the first few<br> weeks of 2024 are still upon us. <br>And while any time is a good time.</p>
+                </div>
             </div>
         </section>
     </main>
