--- a/index.html
+++ b/index.html
@@ -66,18 +66,77 @@
         </div>
         </section>
 
-        <section>
-            <div class="font">
-                <div class="FUNCTIONAL">
+        <section class="funtional">
                     <h5>WHAT IS FUNCTIONAL</h5>
                     <h1><span class="colap">Holidays</span> Sale 50%</h1>
                     <p>New Year's Day has already come and gone,but the first few<br> weeks of 2024 are still upon us. <br>And while any time is a good time.</p>
+
+            <div class="images">
+                <img class="img1" src="resources/Group 44.png" alt="image">
+                <img class="img2" src="resources/Rectangle 1.png" alt="image">
+            </div>
+            <div class="image2-container">
+                <img class="img4" src="resources/Group 75.png" alt="">
+                <img class="img3" src="resources/Rectangle 2.png" alt="">
+            </div>
+        </section>
+
+
+        <section class="write">
+            <div class="read">
+                <h5 class="best">THE BEST GIFTS</h5>
+                <h3 class="our">Our Awesome Portfolio</h3>
+                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+            </div>
+            <div class="box">
+                <img class="box1" src="resources/Rectangle 3.png" alt="">
+                <img class="box2" src="resources/Rectangle 4.png" alt="">
+                <img class="box3" src="resources/Rectangle 5.png" alt="">
+            </div>
+
+            <div class="boxes">
+                <img class="box4" src="resources/Rectangle 6.png" alt="">
+                <img class="box5" src="resources/Rectangle 7.png" alt="">
+                <img class="box6" src="resources/Rectangle 8.png" alt="">
+            </div>
+
+        </section>
+
+        <section>
+            <div class="button-type">
+            <div class="search">
+                <img class="mail" src="resources/Group 61.png" alt="">
+                <h3 class="subscribe">Subscribe Newsletter</h3>
+                <p class="ready">New Year's Day has already come and gone,but the first few<br> weeks of 2024 are still upon us. <br>And while any time is a good time.</p>
+            </div>
+
+            <div class="input-container">
+                <div class="input-space">
+                    <input type="email" placeholder="user@gmail.com">
+                <input type="submit" value="Subscribe">
                 </div>
             </div>
+        </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="foot">
+        <div class="right-side">
+            <p class="big">44, Big Building Roosevelt Street <br>
+                Beach Gardens Florida 33410</p>
+        </div>
+        <div class="media">
+            <img src="resources/Facebook.png" alt="">
+            <img src="resources/Instagram.png" alt="">
+            <img src="resources/Twitter.png" alt="">
+            <img src="resources/Linkedin.png" alt="">
+        </div>
+        <div class="last-content">
+            <span class="footer-span-1">2017, All Rights Reserved.</span>
+            <span class="footer-span-2">Unsubscribe</span>
+        </div>
+
 
     </footer>
     
